Better sort/filtering, links, projects index

--- a/src/projects/projects.liquid
+++ b/src/projects/projects.liquid
@@ -1,13 +1,13 @@
 ---
 layout: base.liquid
-tags: navbar
+tags: projects
 order: 1
 pagination:
   data: categories
   size: 1
   alias: category
   addAllPagesToCollections: true
-permalink: "projects/{{ category.name | slugify  }}"
+permalink: "projects/{{ category.name | slugify  }}/"
 eleventyComputed:
   title: "{{ category.name  }}"
 ---
@@ -22,18 +22,31 @@ eleventyComputed:
     top: anchor(bottom);
     left: calc(anchor(center) - 7.5rem);
   }
+
   /* Hide empty project containers */
-  .project-container:not(:has(> :not([hidden]))), .project-date-header:not(:has(+ .project-container > :not([hidden]))) {
+  body.has-search .project-container:not(:has(> .matches-search)),
+  body.has-search .project-date-header:not(:has(+ .project-container > .matches-search)),
+  
+  body.has-filter .project-container:not(:has(> .matches-filter)),
+  body.has-filter .project-date-header:not(:has(+ .project-container > .matches-filter)),
+  
+  body.has-filter.has-search .project-container:not(:has(> .matches-filter.matches-search)),
+  body.has-filter.has-search .project-date-header:not(:has(+ .project-container > .matches-filter.matches-search)){
     display: none;
   }
+
+  body.has-search .project:not(.matches-search),
+  body.has-filter .project:not(.matches-filter)
+  { display: none; }
 </style>
 
 <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600">Projects - {{ category.name  }}:</h1>
-<p class="text-gray-500 sm:text-xl dark:text-gray-400 mb-4">An imcomplete list of everything I've done</p>
+<p class="text-gray-500 sm:text-xl dark:text-gray-400 mb-4">An incomplete list of everything I've done</p>
 <section class="relative max-w-screen-xl w-full bg-white shadow-md dark:bg-gray-800 sm:rounded-lg mb-8">
 
   <div class="flex flex-col items-center justify-between p-4 gap-3 md:flex-row">
 
+    <!-- search box -->
     <form class="w-full md:w-1/2 flex items-center">
       <label for="search-projects" class="sr-only">Search projects</label>
       <div class="relative w-full">
@@ -44,15 +57,17 @@ eleventyComputed:
               clip-rule="evenodd" />
           </svg>
         </div>
-        <input type="text" id="search-projects"
+        <input type="search" id="search-projects"
           class="block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
           placeholder="Search projects...">
       </div>
     </form>
 
+    <!-- langauge dropdown-->
     <div
       class="flex flex-col items-stretch justify-end flex-shrink-0 w-full space-y-2 md:w-auto md:flex-row md:space-y-0 md:items-center md:space-x-3">
       <div class="flex items-center w-full space-x-3 md:w-auto">
+        <!-- trigger button -->
         <button id="btn-filter-language" type="button" popovertarget="dropdown-filter-language"
           class="flex items-center justify-center w-full px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg md:w-auto focus:outline-none hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mr-2 text-gray-400">
@@ -63,11 +78,22 @@ eleventyComputed:
             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
           </svg>
         </button>
+
+        <!-- actual dropdown (popover) -->
         <div popover="auto" id="dropdown-filter-language" class="z-10 absolute bg-white rounded-lg shadow w-60 dark:bg-gray-700 m-0 mt-3">
           <ul class="h-48 py-2 overflow-y-auto text-gray-700 dark:text-gray-200" aria-labelledby="btn-filter-language">
+            <li class="flex items-center px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white cursor-pointer" data-lang="">              
+              Clear Filter
+            </li>
+
             {% for lang in category.langs %}
-              <li class="dropdown-filter-language-item flex items-center px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white cursor-pointer" data-lang="{{ lang.lang }}">
-                <img class="w-5 h-5 me-2" src="https://cdn.jsdelivr.net/gh/devicons/devicon@develop/icons/{{ devicons[lang.lang] }}/{{ devicons[lang.lang] }}-plain.svg">
+              {% assign devicon = devicons[lang.lang] %}
+              <li class="flex items-center px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white cursor-pointer" data-lang="{{ lang.lang }}">
+                {% if devicon.style %}
+                <img class="w-5 h-5 me-2" src="https://cdn.jsdelivr.net/gh/devicons/devicon@develop/icons/{{ devicon.name }}/{{ devicon.name }}-{{ devicon.style }}.svg">
+                {% else %}
+                <img class="w-5 h-5 me-2" src="https://cdn.jsdelivr.net/gh/devicons/devicon@develop/icons/{{ devicon }}/{{ devicon }}-plain.svg">
+                {% endif %}
                 <div>
                   {{ langs[lang.lang] }}
                   <p class="text-xs font-normal text-gray-500 dark:text-gray-300">{{ lang.count }} project(s)</p>
@@ -90,32 +116,63 @@ eleventyComputed:
     <div class="project-container flex flex-wrap gap-3 items-start">
       {% for item in date.projects %}
         <div class="project max-w-md p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+          {% if item.cat %}
           <div class="mb-5">
             <span class="opacity-75 bg-primary-100 text-primary-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-primary-200 dark:text-primary-800">
               <svg class="mr-1 w-3 h-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"></path></svg>
               {{ item.cat  }}
             </span>
           </div>
-          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ item.name }}</h5>
-          <p class="font-normal text-gray-700 dark:text-gray-400 mb-5">{{ item.description }}</p>
+          {% endif %}
+          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white name">{{ item.name }}</h5>
+          <p class="font-normal text-gray-700 dark:text-gray-400 mb-5 description">{{ item.description }}</p>
+
+          {% if item.langs.size > 0 %}
           <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Languages used:</p>
           <div class="flex flex-wrap gap-1 mb-3">
             {% for lang in item.langs %}
               <span class="lang-tag bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 cursor-pointer hover:bg-blue-200 dark:hover:bg-blue-800" data-lang="{{ lang }}">{{ langs[lang] }}</span>
             {% endfor %}
           </div>
+          {% endif %}
+
+          {% if iitem.tools.size > 0 %}
           <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Tools/frameworks utilized:</p>
           <div class="flex flex-wrap gap-1 mb-3">
             {% for tool in item.tools %}
               <span class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300" data-tool="{{ tool }}">{{ tool }}</span>
             {% endfor %}
           </div>
+          {% endif %}
+
+          {% if item.skills.size > 0 %}
           <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Skills acquired:</p>
-          <div class="flex flex-wrap gap-1">
+          <div class="flex flex-wrap gap-1 mb-3">
             {% for skill in item.skills %}
               <span class="bg-gray-100 text-gray-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{ skill }}</span>
             {% endfor %}
           </div>
+          {% endif %}
+
+          {% if item.links.size > 0 %}
+            <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm mt-2">Links:</p>
+            <div class="flex flex-wrap gap-1">
+              {% for link in item.links %}
+                <a class="text-gray-900 dark:text-white hover:text-primary-950 dark:hover:text-primary-100 me-2" href="{{ link }}" target="_blank">
+                  <!-- github repo -->
+                  {% if link contains "https://github.com" %}
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                    </svg>
+                  {% else %}
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m7.5-6.923c-.67.204-1.335.82-1.887 1.855A8 8 0 0 0 5.145 4H7.5zM4.09 4a9.3 9.3 0 0 1 .64-1.539 7 7 0 0 1 .597-.933A7.03 7.03 0 0 0 2.255 4zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a7 7 0 0 0-.656 2.5zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5zM8.5 5v2.5h2.99a12.5 12.5 0 0 0-.337-2.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5zM5.145 12q.208.58.468 1.068c.552 1.035 1.218 1.65 1.887 1.855V12zm.182 2.472a7 7 0 0 1-.597-.933A9.3 9.3 0 0 1 4.09 12H2.255a7 7 0 0 0 3.072 2.472M3.82 11a13.7 13.7 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5zm6.853 3.472A7 7 0 0 0 13.745 12H11.91a9.3 9.3 0 0 1-.64 1.539 7 7 0 0 1-.597.933M8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855q.26-.487.468-1.068zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.7 13.7 0 0 1-.312 2.5m2.802-3.5a7 7 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7 7 0 0 0-3.072-2.472c.218.284.418.598.597.933M10.855 4a8 8 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4z"/>
+                    </svg>
+                  {% endif  %}
+                </a>
+              {% endfor %}
+            </div>
+            {% endif %}
         </div>  
       {% endfor %}
       
@@ -126,25 +183,66 @@ eleventyComputed:
 <script>
 const dropdownText = document.getElementById("btn-filter-language-text");
 const dropdown = document.getElementById("dropdown-filter-language");
+const searchBox = document.getElementById("search-projects");
 const langs = {{ langs | json }};
 
 function filterByLanguage(language) {
-  document.querySelectorAll(".project").forEach(el => el.hidden = true);
-  document.querySelectorAll(`.project:has(.lang-tag[data-lang="${language}"])`).forEach(el => el.hidden = false);
-  dropdownText.innerText = langs[language];
-  url.searchParams.set("lang", language);
+  document.querySelectorAll(".matches-filter").forEach(el => el.classList.remove("matches-filter"));
+
+  if (language) {
+    document.querySelectorAll(`.project:has(.lang-tag[data-lang="${language}"])`).forEach(el => el.classList.add("matches-filter"));
+    
+    dropdownText.innerText = langs[language];
+
+    url.searchParams.set("lang", language);
+    document.body.classList.add("has-filter");
+  } else {
+    // clear filter
+    dropdownText.innerText = "Language";
+    url.searchParams.delete("lang");
+    document.body.classList.remove("has-filter");
+  }
+
   window.history.replaceState(null, "", url.href);
   dropdown.hidePopover();
 }
 
+function search(text) {
+  // Hide/show the projects
+  document.querySelectorAll(".project").forEach(el => {
+    if (!text) el.classList.remove("matches-search");
+
+    const name = el.querySelector(".name")?.innerText.toLowerCase() ?? "";
+    const description = el.querySelector(".description")?.innerText.toLowerCase() ?? "";
+    // Update the matches-search class
+    el.classList.toggle("matches-search", name.includes(text) || description.includes(text));
+  });
+
+  if (text) {
+    url.searchParams.set("search", text);
+    document.body.classList.add("has-search");
+  } else {
+    url.searchParams.delete("search");
+    document.body.classList.remove("has-search");
+  }
+
+  window.history.replaceState(null, "", url.href);
+}
+
 const url = new URL(location.href);
 if (url.searchParams.has("lang")) filterByLanguage(url.searchParams.get("lang"));
+if (url.searchParams.has("search")) {
+  search(url.searchParams.get("search").toLowerCase());
+  searchBox.value = url.searchParams.get("search");
+}
 
-document.querySelectorAll(".dropdown-filter-language-item").forEach(el => el.addEventListener("click", () => {
+dropdown.querySelectorAll("li").forEach(el => el.addEventListener("click", () => {
   filterByLanguage(el.dataset.lang);
 }));
 
 document.querySelectorAll(".lang-tag").forEach(el => el.addEventListener("click", () => {
   filterByLanguage(el.dataset.lang);
 }));
+
+searchBox.addEventListener("input", () => search(searchBox.value.toLowerCase()));
 </script>
