--- a/src/projects/skills.liquid
+++ b/src/projects/skills.liquid
@@ -2,7 +2,7 @@
 layout: base.liquid
 tags: navbar
 order: 2
-permalink: "skills"
+permalink: "/skills/"
 title: "Skills"
 ---
 
@@ -17,9 +17,14 @@ title: "Skills"
 <ul class="grid w-full gap-6 grid-cols-3 md:grid-cols-5 mb-4">
   {% for lang in aggregatedLangs %}
     <a href="/projects/software?lang={{ lang.lang }}"
-      class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-blue-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700">
+      class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border-2 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 hover:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700">
       <div class="block">
-        <img class="mb-2 w-7 h-7" src="https://cdn.jsdelivr.net/gh/devicons/devicon@develop/icons/{{ devicons[lang.lang] }}/{{ devicons[lang.lang] }}-plain.svg" />
+        {% assign devicon = devicons[lang.lang] %}
+        {% if devicon.style %}
+        <img class="mb-2 w-7 h-7" src="https://cdn.jsdelivr.net/gh/devicons/devicon@develop/icons/{{ devicon.name }}/{{ devicon.name }}-{{ devicon.style }}.svg" />
+        {% else %}
+        <img class="mb-2 w-7 h-7" src="https://cdn.jsdelivr.net/gh/devicons/devicon@develop/icons/{{ devicon }}/{{ devicon }}-plain.svg" />
+        {% endif %}
         <div class="w-full text-lg font-semibold">{{ langs[lang.lang] }}</div>
         <div class="w-full text-sm">{{ lang.count }} projects</div>
       </div>
