Gradient BG and about page

--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="min-h-full">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="{% if title %}{{ title }} - {% endif %}Siddhant Kameswar" />
+    {% if description %}
+      <meta name="description" content="{{ description }}" />
+    {% endif %}
     <title>
       {% if title %}
         {{ title }} -
       {% endif %}
-      Siddhant Kameswar</title>
+      Siddhant Kameswar
+    </title>
     <link rel="stylesheet" href="/main.css" />
   </head>
-  <body class="bg-white dark:bg-gray-900">
+  <body class="bg-white dark:bg-gray-900 min-h-full">
+    <!-- background image -->
+    <div class="fixed w-screen h-screen inset-0 -z-10" id="bg-image">
+      <img src="/assets/backdrop-gradient-light.svg" class="dark:hidden" />
+      <img src="/assets/backdrop-gradient.svg" class="hidden dark:inline" />
+    </div>
+
     <header class="inline">
-      <nav class="z-50 sticky top-3 bg-white/95 backdrop-blur dark:bg-transparent supports-backdrop-blur:bg-white/60 border-gray-900/10 dark:border-gray-50/[0.06] border mt-3 mb-6 mx-3 rounded-lg">
+      <nav class="z-50 sticky top-3 bg-white/95 backdrop-blur dark:bg-transparent supports-[backdrop-filter]:bg-primary-100/60 dark:supports-[backdrop-filter]:bg-primary-950/40 border-gray-900/10 dark:border-gray-50/[0.06] border mt-3 mb-6 mx-3 rounded-lg">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 lg:px-8">
+          <!-- left side of navbar - my name-->
           <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse text-2xl font-semibold dark:text-white">Siddhant Kameswar</a>
           <button type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
             <span class="sr-only">Open main menu</span>
@@ -22,6 +34,7 @@
             </svg>
           </button>
           <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <!-- pages -->
             <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
               {%- for navbarPage in collections.navbarSorted -%}
                 <li>
