Fix background sizing

--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -18,8 +18,8 @@
   <body class="bg-white dark:bg-gray-900 min-h-full">
     <!-- background image -->
     <div class="fixed w-screen h-screen inset-0 -z-10" id="bg-image">
-      <img src="/assets/backdrop-gradient-light.svg" class="dark:hidden" />
-      <img src="/assets/backdrop-gradient.svg" class="hidden dark:inline" />
+      <img src="/assets/backdrop-gradient-light.svg" class="dark:hidden min-w-full min-h-full max-w-[unset]" />
+      <img src="/assets/backdrop-gradient.svg" class="hidden dark:inline min-w-full min-h-full max-w-[unset]" />
     </div>
 
     <header class="inline">
