--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -51,9 +51,29 @@
         </div>
       </nav>
     </header>
-    <main class="px-4">
+    <main class="px-4 mb-3">
       {{ content }}
     </main>
-    <footer></footer>
+    
+    <footer class="bg-primary-100/60 rounded-lg shadow m-4 dark:bg-primary-950/40">
+      <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 Siddhant Kameswar</span>
+        <!-- <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"> -->
+        <!--   <li> -->
+        <!--     <a href="#" class="hover:underline me-4 md:me-6">About</a> -->
+        <!--   </li> -->
+        <!--   <li> -->
+        <!--     <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a> -->
+        <!--   </li> -->
+        <!--   <li> -->
+        <!--     <a href="#" class="hover:underline me-4 md:me-6">Licensing</a> -->
+        <!--   </li> -->
+        <!--   <li> -->
+        <!--     <a href="#" class="hover:underline">Contact</a> -->
+        <!--   </li> -->
+        <!-- </ul> -->
+      </div>
+    </footer>
+
   </body>
 </html>
