--- a/src/projects/projects.liquid
+++ b/src/projects/projects.liquid
@@ -10,6 +10,7 @@ pagination:
 permalink: "projects/{{ category.name | slugify  }}/"
 eleventyComputed:
   title: "{{ category.name  }}"
+  count: "{{ category.count }}"
 ---
 
 <style>
@@ -42,7 +43,7 @@ eleventyComputed:
 
 <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600">Projects - {{ category.name  }}:</h1>
 <p class="text-gray-500 sm:text-xl dark:text-gray-400 mb-4">An incomplete list of everything I've done</p>
-<section class="relative max-w-screen-xl w-full bg-white shadow-md dark:bg-gray-800 sm:rounded-lg mb-8">
+<section class="relative max-w-screen-xl w-full bg-white shadow-md dark:bg-gray-800 rounded-lg mb-8">
 
   <div class="flex flex-col items-center justify-between p-4 gap-3 md:flex-row">
 
@@ -107,75 +108,76 @@ eleventyComputed:
   </div>
 </section>
 
-<section>
+<section class="columns-1 md:columns-2 xl:columns-3">
   {% for date in category.dates %}
-    <div class="project-date-header max-w-screen-md flex my-2 items-center gap-3">
-      <h2 class="text-sm tracking-tight uppercase text-gray-700 dark:text-gray-300 shrink-0">{{ date.date }}</h2>
-      <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
-    </div>
-    <div class="project-container flex flex-wrap gap-3 items-start">
-      {% for item in date.projects %}
-        <div class="project max-w-md p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-          {% if item.cat %}
-          <div class="mb-5">
-            <span class="opacity-75 bg-primary-100 text-primary-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-primary-200 dark:text-primary-800">
-              <svg class="mr-1 w-3 h-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"></path></svg>
-              {{ item.cat  }}
-            </span>
-          </div>
-          {% endif %}
-          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white name">{{ item.name }}</h5>
-          <p class="font-normal text-gray-700 dark:text-gray-400 mb-5 description">{{ item.description }}</p>
-
-          {% if item.langs.size > 0 %}
-          <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Languages used:</p>
-          <div class="flex flex-wrap gap-1 mb-3">
-            {% for lang in item.langs %}
-              <span class="lang-tag bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 cursor-pointer hover:bg-blue-200 dark:hover:bg-blue-800" data-lang="{{ lang }}">{{ langs[lang] }}</span>
-            {% endfor %}
-          </div>
-          {% endif %}
-
-          {% if iitem.tools.size > 0 %}
-          <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Tools/frameworks utilized:</p>
-          <div class="flex flex-wrap gap-1 mb-3">
-            {% for tool in item.tools %}
-              <span class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300" data-tool="{{ tool }}">{{ tool }}</span>
-            {% endfor %}
-          </div>
-          {% endif %}
-
-          {% if item.skills.size > 0 %}
-          <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Skills acquired:</p>
-          <div class="flex flex-wrap gap-1 mb-3">
-            {% for skill in item.skills %}
-              <span class="bg-gray-100 text-gray-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{ skill }}</span>
-            {% endfor %}
-          </div>
-          {% endif %}
-
-          {% if item.links.size > 0 %}
-            <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm mt-2">Links:</p>
-            <div class="flex flex-wrap gap-1">
-              {% for link in item.links %}
-                <a class="text-gray-900 dark:text-white hover:text-primary-950 dark:hover:text-primary-100 me-2" href="{{ link }}" target="_blank">
-                  <!-- github repo -->
-                  {% if link contains "https://github.com" %}
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
-                    </svg>
-                  {% else %}
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m7.5-6.923c-.67.204-1.335.82-1.887 1.855A8 8 0 0 0 5.145 4H7.5zM4.09 4a9.3 9.3 0 0 1 .64-1.539 7 7 0 0 1 .597-.933A7.03 7.03 0 0 0 2.255 4zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a7 7 0 0 0-.656 2.5zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5zM8.5 5v2.5h2.99a12.5 12.5 0 0 0-.337-2.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5zM5.145 12q.208.58.468 1.068c.552 1.035 1.218 1.65 1.887 1.855V12zm.182 2.472a7 7 0 0 1-.597-.933A9.3 9.3 0 0 1 4.09 12H2.255a7 7 0 0 0 3.072 2.472M3.82 11a13.7 13.7 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5zm6.853 3.472A7 7 0 0 0 13.745 12H11.91a9.3 9.3 0 0 1-.64 1.539 7 7 0 0 1-.597.933M8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855q.26-.487.468-1.068zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.7 13.7 0 0 1-.312 2.5m2.802-3.5a7 7 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7 7 0 0 0-3.072-2.472c.218.284.418.598.597.933M10.855 4a8 8 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4z"/>
-                    </svg>
-                  {% endif  %}
-                </a>
-              {% endfor %}
-            </div>
+    <div class="break-inside-avoid-column">
+      <div class="project-date-header max-w-screen-md flex my-2 items-center gap-3">
+        <h2 class="text-sm tracking-tight uppercase text-gray-700 dark:text-gray-300 shrink-0">{{ date.date }}</h2>
+        <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
+      </div>
+      <div class="project-container flex flex-wrap gap-3 items-start break-inside-avoid-column">
+        {% for item in date.projects %}
+          <div class="project max-w-lg p-6 bg-gray-50 border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            {% if item.cat %}
+              <div class="mb-5">
+                <span class="opacity-75 bg-primary-100 text-primary-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-primary-200 dark:text-primary-800">
+                  <svg class="mr-1 w-3 h-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"></path></svg>
+                  {{ item.cat  }}
+                </span>
+              </div>
             {% endif %}
-        </div>  
-      {% endfor %}
-      
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white name">{{ item.name }}</h5>
+            <p class="font-normal text-gray-700 dark:text-gray-400 mb-5 description">{{ item.description }}</p>
+
+            {% if item.langs.size > 0 %}
+              <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Languages used:</p>
+              <div class="flex flex-wrap gap-1 mb-3">
+                {% for lang in item.langs %}
+                  <span class="lang-tag bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 cursor-pointer hover:bg-blue-200 dark:hover:bg-blue-800" data-lang="{{ lang }}">{{ langs[lang] }}</span>
+                  {% endfor %}
+              </div>
+            {% endif %}
+
+            {% if iitem.tools.size > 0 %}
+              <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Tools/frameworks utilized:</p>
+              <div class="flex flex-wrap gap-1 mb-3">
+                {% for tool in item.tools %}
+                  <span class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300" data-tool="{{ tool }}">{{ tool }}</span>
+                  {% endfor %}
+              </div>
+            {% endif %}
+
+            {% if item.skills.size > 0 %}
+              <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm">Skills acquired:</p>
+              <div class="flex flex-wrap gap-1 mb-3">
+                {% for skill in item.skills %}
+                  <span class="bg-gray-100 text-gray-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{ skill }}</span>
+                  {% endfor %}
+              </div>
+            {% endif %}
+
+            {% if item.links.size > 0 %}
+              <p class="font-medium text-gray-800 dark:text-gray-100 mb-1 text-sm mt-2">Links:</p>
+              <div class="flex flex-wrap gap-1">
+                {% for link in item.links %}
+                  <a class="text-gray-900 dark:text-white hover:text-primary-950 dark:hover:text-primary-100 me-2" href="{{ link }}" target="_blank">
+                    <!-- github repo -->
+                    {% if link contains "https://github.com" %}
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                      </svg>
+                    {% else %}
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m7.5-6.923c-.67.204-1.335.82-1.887 1.855A8 8 0 0 0 5.145 4H7.5zM4.09 4a9.3 9.3 0 0 1 .64-1.539 7 7 0 0 1 .597-.933A7.03 7.03 0 0 0 2.255 4zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a7 7 0 0 0-.656 2.5zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5zM8.5 5v2.5h2.99a12.5 12.5 0 0 0-.337-2.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5zM5.145 12q.208.58.468 1.068c.552 1.035 1.218 1.65 1.887 1.855V12zm.182 2.472a7 7 0 0 1-.597-.933A9.3 9.3 0 0 1 4.09 12H2.255a7 7 0 0 0 3.072 2.472M3.82 11a13.7 13.7 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5zm6.853 3.472A7 7 0 0 0 13.745 12H11.91a9.3 9.3 0 0 1-.64 1.539 7 7 0 0 1-.597.933M8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855q.26-.487.468-1.068zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.7 13.7 0 0 1-.312 2.5m2.802-3.5a7 7 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7 7 0 0 0-3.072-2.472c.218.284.418.598.597.933M10.855 4a8 8 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4z"/>
+                      </svg>
+                    {% endif  %}
+                  </a>
+                {% endfor %}
+              </div>
+            {% endif %}
+          </div>
+        {% endfor %}
+      </div>
     </div>
   {% endfor %}
 </section>
